tags/2013-08-29_cppreference/Archive/a83b963c515f4f5f6e2ee8abd64156da-3b440a87a52fe2ae7c853c82f4c5144f/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:4:28: error: ISO C does not permit named variadic macros [-Wvariadic-macros]
 #define _ERROR(format, args...)  \
                            ^
